# aoc2019

./: .gitignore  aoc2019.cabal  setup.py
solutions/: d1.hs  d10.hs  d11.hs  d12.hs  d13.hs  d14.hs  d15.hs  d16.hs  d17.hs  d18.hs  d19.hs  d2.hs  d20.hs  d21.hs  d22.hs  d23.hs  d24.hs  d25.hs  d3.hs  d4.hs  d5.hs  d6.hs  d7.hs  d8.hs  d9.hs
