cabal-version:      3.0
name:               aoc2019
version:            0.1.0.0

common warnings
    ghc-options: -Wall
    hs-source-dirs:   solutions
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        timeit ^>=2.0,

executable d1
    import:           warnings
    main-is:          d1.hs
    --build-depends:

executable d2
    import:           warnings
    main-is:          d2.hs
    build-depends:    split ^>=0.2.5,

executable d3
    import:           warnings
    main-is:          d3.hs
    build-depends:    split ^>=0.2.5,

executable d4
    import:           warnings
    main-is:          d4.hs
    build-depends:    split ^>=0.2.5,