cabal-version:      3.0
name:               aoc2019
version:            0.1.0.0

common warnings
    ghc-options: -Wall
    hs-source-dirs:   solutions
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        timeit ^>=2.0,
        split ^>=0.2.5,

executable d1
    import:           warnings
    main-is:          d1.hs
    --build-depends:

executable d2
    import:           warnings
    main-is:          d2.hs
    --build-depends:   

executable d3
    import:           warnings
    main-is:          d3.hs
    --build-depends:

executable d4
    import:           warnings
    main-is:          d4.hs
    --build-depends:

executable d5
    import:           warnings
    main-is:          d5.hs
    --build-depends:

executable d6
    import:           warnings
    main-is:          d6.hs
    build-depends:    containers ^>=0.7,

executable d7
    import:           warnings
    main-is:          d7.hs
    --build-depends:

executable d8
    import:           warnings
    main-is:          d8.hs
    --build-depends:

executable d9
    import:           warnings
    main-is:          d9.hs
    build-depends:    containers ^>=0.7,

executable d10
    import:           warnings
    main-is:          d10.hs
    build-depends:    containers ^>=0.7,